--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -14,6 +14,7 @@
 @import "layout/contenido";
 @import "layout/navigation";
 @import "layout/footer";
+@import "layout/newsletter";
 
 @import "components/buttons";
 @import "components/carousel";
