--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,43 +1,49 @@
+body {
+  max-width: 100vw;
+}
+
 * {
   box-sizing: border-box;
 }
 
 body {
   font-family: monospace;
+  margin: 0;
+  padding: 0;
 }
 
 .contenedor {
-  width: 960px;
+  width: 90%;
   margin: 0 auto;
 }
 
 .contenido {
-  width: 960px;
-  margin: 0 auto;
+  clear: both;
+  display: grid;
+  grid-template-columns: 700fr 220fr;
+  gap: 20px;
 }
 .contenido .listado-noticias {
-  width: 700px;
-  float: left;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: auto 1fr;
+  gap: 10px;
 }
 .contenido .listado-noticias .listado-noticias__noticia {
-  width: 210px;
-  display: inline-block;
-  margin: 5px;
   cursor: pointer;
 }
+.contenido .listado-noticias .listado-noticias__cabecera {
+  font-family: "Nova Mono", monospace;
+}
 .contenido .listado-noticias .listado-noticias__cuerpo img {
-  width: 210px;
+  width: 100%;
   height: 300px;
 }
 .contenido .listado-noticias .listado-noticias__cuerpo p {
   padding: 5px 10px;
 }
-.contenido .listado-izquierdo {
-  width: 220px;
-  float: right;
-}
 .contenido .listado-izquierdo .listado-izquierdo__cabecera-listado {
-  width: 220px;
+  width: 100%;
   border-bottom: 1px solid gray;
 }
 .contenido .listado-izquierdo .listado-izquierdo__tags {
@@ -61,32 +67,113 @@ body {
   height: 200px;
 }
 
+@media (max-width: 768px) {
+  .contenido {
+    grid-template-columns: 1fr;
+  }
+  .contenido .listado-noticias {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+  }
+  .contenido .listado-izquierdo {
+    display: none;
+  }
+}
 .menu {
-  width: 960px;
+  width: 100%;
   padding: 10px;
   border-bottom: 1px solid gray;
 }
 
 .menu__logo {
+  font-family: "Coda", serif;
   font-size: 24px;
   font-weight: bold;
   text-transform: uppercase;
-  display: inline-block;
 }
 
 .menu__nav {
+  position: absolute;
+  right: 6%;
+  top: 0;
+}
+
+.menu__nav li {
   display: inline-block;
-  width: 840px;
-  text-align: right;
+  list-style: none;
 }
 
 .menu__nav ul li a {
   text-decoration: none;
   text-transform: uppercase;
+  font-family: "Nova Mono", monospace;
+  font-size: 1rem;
+  color: black;
+  border-radius: 5px;
+  padding: 0.5rem;
 }
 
 .menu__input-menu {
+  font-family: "Nova Mono", monospace;
+  font-size: 1rem;
+  padding-left: 1rem;
+  border: 2px solid #666;
   border-radius: 30px;
+}
+
+.menu__nav ul li:hover > :not(input) {
+  background-color: black;
+  color: white;
+  transition: ease-in-out 0.5s;
+}
+
+@media (max-width: 768px) {
+  .menu__nav {
+    width: 50%;
+  }
+  .menu__nav li {
+    width: 25%;
+  }
+
+  .menu__nav ul li a {
+    font-size: 0.8rem;
+  }
+
+  .menu__input-menu {
+    margin-left: 2rem;
+    width: 8rem;
+    font-size: 0.8rem;
+  }
+
+  .menu .menu__nav li:first-child {
+    display: none;
+  }
+}
+.footer {
+  text-align: center;
+}
+
+.newsletter {
+  background-color: #ccc;
+  text-align: center;
+  padding: 2rem;
+}
+
+.newsletter__group {
+  display: inline-block;
+  margin: 0;
+}
+.newsletter__group input {
+  height: 2rem;
+  border: none;
+}
+
+.button {
+  background-color: #ff8052;
+  border: none;
+  color: white;
+  font-size: 0.5rem;
+  height: 2rem;
 }
 
 /*# sourceMappingURL=style.css.map */
