--- a/assets/sass/layout/_contenido.scss
+++ b/assets/sass/layout/_contenido.scss
@@ -1,19 +1,23 @@
 .contenido {
-  width: 960px;
-  margin: 0 auto;
+  clear: both;
+  display: grid;
+  grid-template-columns: 700fr 220fr;
+  gap: 20px;
 
   // Listado noticias
   .listado-noticias {
-    width: 700px;
-    float: left;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto 1fr;
+    gap: 10px;
     .listado-noticias__noticia {
-      width: 210px;
-      display: inline-block;
-      margin: 5px;
       cursor: pointer;
     }
+    .listado-noticias__cabecera {
+      font-family: $nova;
+    }
     .listado-noticias__cuerpo img {
-      width: 210px;
+      width: 100%;
       height: 300px;
     }
     .listado-noticias__cuerpo p {
@@ -23,10 +27,8 @@
 
   // Listado lateral
   .listado-izquierdo {
-    width: 220px;
-    float: right;
     .listado-izquierdo__cabecera-listado {
-      width: 220px;
+      width: 100%;
       border-bottom: 1px solid gray;
     }
     .listado-izquierdo__tags {
@@ -48,6 +50,19 @@
     .listado-izquierdo__noticias-destacadas img {
       width: 220px;
       height: 200px;
+    }
+  }
+}
+
+@media (max-width: $md) {
+  .contenido {
+    grid-template-columns: 1fr;
+    .listado-noticias {
+      grid-template-columns: 1fr;
+      grid-template-rows: 1fr;
+    }
+    .listado-izquierdo {
+      display: none;
     }
   }
 }
